@@ -24,10 +24,8 @@ AUX lua-5.1.3-test.patch 340 RMD160 5ab1fdfaf1c18d26c66096ade8944223c21ce9ca SHA
 AUX lua-5.1.4-deprecated.patch 1417 RMD160 c2f51932850ca7deb6a0df41e4fe67764e48608c SHA1 f003694a532f6cb4bb629918d8c2db8c52696723 SHA256 8d4d3c35d9cfb65f6caa360c09d1fa0c5dc1ee0de3389c1e73602fef86cd0e9f
 AUX lua-5.1.4-test.patch 340 RMD160 5ab1fdfaf1c18d26c66096ade8944223c21ce9ca SHA1 9e1fc7b770f2586dd386bea60717962f650a1923 SHA256 cdbb06f6fc5e75512c912360e1efc12e1e62ac7079972ff1c9c9273898bf9e31
 DIST lua-5.1.4.tar.gz 216679 RMD160 c867c8364295d3e4fb4e4d8ebb27fa2b2312cdef SHA1 2b11c8e60306efb7f0734b747588f57995493db7 SHA256 b038e225eaf2a5b57c9bcc35cd13aa8c6c8288ef493d52970c9545074098af3a
-EBUILD lua-5.1.4-r1.ebuild 3610 RMD160 8e52f7cb0cf20522dcc02794f62a55b2edfcf37d SHA1 a9cec1553a600bc539a07a342e0a522465c57c41 SHA256 1d4684e5e6689a89bb1eb22f6464a098d01c9cc77e2c0d55d5bade7aa29878d2
-EBUILD lua-5.1.4-r2.ebuild 3766 RMD160 f242b6f063ef4025a36d144c12a93d9708521af7 SHA1 b8177d807edfcf4a155ba63556a2706d7e64c632 SHA256 b8a6fc749a4b6acd590d2adcdc8e331ede55b6a3df86ddd9762d1f1c1d4c7371
 EBUILD lua-5.1.4-r4.ebuild 3824 RMD160 bcd935224161c280b288bad0564b75dc68cc15e0 SHA1 c1792b3d63e6662318fcea0f130b9a4c4976eeec SHA256 8f3308a28a6c884bbb2e88a110fcd288d4ec1b488e5c3feffeb179915dffbfbd
-EBUILD lua-5.1.4-r5.ebuild 3841 RMD160 63eee60e07fd500105bbaf23d928609d1924eb24 SHA1 c523aeb1153aa89b1b95f4a885775985fc80b2ba SHA256 c985ff4ff9c7c2bb0431afa81fd4ddc0395b6adb05ff70791882f3e16b0a126c
+EBUILD lua-5.1.4-r6.ebuild 3841 RMD160 300f8b199430e5839d7ca82140fbb5344dde887b SHA1 3065332e451874de644f7a74d371d7f41f2e5853 SHA256 45473c17bffaa67f93e0973dfba8d527b2f4dffb2036252e36c8a99f0d93dcde
 EBUILD lua-5.1.4.ebuild 3361 RMD160 3d1700ed30eaac8127ea5631c2910ad2d7aecde8 SHA1 94b68ef195445fdb8dba995ad54d415ed233cd2b SHA256 34b7e7bfb8f99818bcdf38f38236148356dc8e893d1a7f2a20c9e7d5d48f5eb9
-MISC ChangeLog 21661 RMD160 8ab158dacc9fd8b3372fc4616a75d20040b7b077 SHA1 11245105bd3208af7d182b638c4d29e80c278ab5 SHA256 0b436dfc169450cf702bad581a0bd659191f455a33b967576e981b0389c9db51
+MISC ChangeLog 22004 RMD160 fb1e1c7cacdd407f546ec524d95c5fac50d33b62 SHA1 68b90d00f0d78851c4223438b4d947c4e128f698 SHA256 b85145c28018e982dc775240f738fc46b50fa197f9ed3e71a0ac652ea88da8d3
 MISC metadata.xml 339 RMD160 0d536a77658ffb6d8bccff7183a5bf4722d0a82d SHA1 f5bd1085f69b6e9d81e42cd711a7846ccb267e31 SHA256 6b3bedf093395def984b71f7c74ce59742c5df6592ad50f1b96c8a2499f27c8b
